Archive2/d6/98e0a57214210e/output
main.cpp:4:10: error: unknown type name 'vo'
 int main(vo
          ^
main.cpp:4:10: error: ISO C forbids forward parameter declarations [-Wpedantic]
main.cpp:8:3: error: expected declaration specifiers or '...' before 'printf'
   printf("original values: a == %d, b == %d\n", a, b);
   ^
main.cpp:9:3: error: expected declaration specifiers or '...' before 'printf'
   printf("result of postfix operators: a++ == %d, b-- == %d\n", a++, b--);
   ^
main.cpp:10:3: error: expected declaration specifiers or '...' before 'printf'
   printf("after postfix operators applied: a == %d, b == %d\n", a, b);
   ^
main.cpp:13:3: error: unknown type name 'a'
   a = 1;
   ^
main.cpp:14:3: error: unknown type name 'b'
   b = 1;
   ^
main.cpp:17:3: error: expected declaration specifiers or '...' before 'printf'
   printf("\n");
   ^
main.cpp:18:3: error: expected declaration specifiers or '...' before 'printf'
   printf("original values: a == %d, b == %d\n", a, b);
   ^
main.cpp:19:3: error: expected declaration specifiers or '...' before 'printf'
   printf("result of prefix operators: ++a == %d, --b == %d\n", ++a, --b);
   ^
main.cpp:20:3: error: expected declaration specifiers or '...' before 'printf'
   printf("after prefix operators applied: a == %d, b == %d\n", a, b);
   ^
main.cpp:22:3: error: expected declaration specifiers or '...' before 'printf'
   printf("\n");
   ^
main.cpp:24:3: error: expected declaration specifiers or '...' before 'return'
   return EXIT_SUCCESS;
   ^
main.cpp:25:1: error: expected declaration specifiers or '...' before '}' token
 }
 ^
main.cpp:25:1: error: expected ';', ',' or ')' before '}' token
